src/tests/testfiles/binary-operators/types-1700.txt
Error at 2:6: Comparison operator operands need to be of same type
1 == 2.0;
  ^
